--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,56 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+  <group android:scaleX="0.55"
+      android:scaleY="0.55"
+      android:translateX="21.6"
+      android:translateY="21.6">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#FF000000"
+        android:pathData="M40.35,40.4a1,1 0,0 1,-0.92 -0.62L37.55,35.3a1,1 0,1 1,1.85 -0.77L41.28,39a1,1 0,0 1,-0.54 1.31A1.09,1.09 0,0 1,40.35 40.4Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M21.7,60.5c-4.15,0 -11.82,-1.29 -19.43,-9.35a1,1 0,0 1,0 -1.41,1 1,0 0,1 1.42,0C13.89,60.53 24,58.36 24.38,58.27a1,1 0,0 1,0.46 1.94A14.32,14.32 0,0 1,21.7 60.5Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12.91,83.82h-0.1a1,1 0,0 1,-0.9 -1.09C13.6,65.41 26,63.39 26.07,63.37a1,1 0,0 1,0.3 2c-0.45,0.07 -10.94,1.87 -12.47,17.57A1,1 0,0 1,12.91 83.82Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M28.51,91.62a1,1 0,0 1,-0.85 -0.47c-7.75,-12.22 5,-20.71 5.09,-20.79A1,1 0,1 1,33.85 72c-0.46,0.3 -11.19,7.5 -4.5,18A1,1 0,0 1,29 91.46,1 1,0 0,1 28.51,91.62Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M25.79,52.33l-0.17,0c-0.14,0 -13.81,-2.48 -15.33,-18a1,1 0,0 1,0.9 -1.09,1 1,0 0,1 1.09,0.9c1.37,14 13.55,16.19 13.67,16.21a1,1 0,0 1,-0.16 2Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12.66,35.22l-1.38,0a1,1 0,0 1,-0.75 -0.4c-0.26,-0.34 -6.28,-8.55 -4,-17.31C7.88,12 12.13,7.67 19.1,4.47a1,1 0,0 1,1 0.11,1 1,0 0,1 0.4,0.93L18.74,19.42l11.39,-7a1,1 0,0 1,1 0,1 1,0 0,1 0.54,0.82c0,0.43 0.67,10.58 -5.6,17C22.8,33.54 18.29,35.22 12.66,35.22ZM11.86,33.22c5.45,0.16 9.75,-1.32 12.76,-4.41 4.21,-4.31 4.95,-10.73 5.05,-13.76L18,22.23a1,1 0,0 1,-1.06 0,1 1,0 0,1 -0.45,-1L18.3,7.1C12.87,9.93 9.56,13.58 8.43,18 6.68,24.83 10.76,31.56 11.86,33.21Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M37.63,36.07a3.28,3.28 0,1 1,3.29 -3.28A3.28,3.28 0,0 1,37.63 36.07ZM37.63,31.51a1.28,1.28 0,1 0,1.29 1.28A1.28,1.28 0,0 0,37.63 31.51Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M52.94,78H43.06a9.91,9.91 0,0 1,-6.76 -2.65l-9.49,-8.76a10,10 0,0 1,-3.2 -7.32V55.76a10,10 0,0 1,3.48 -7.58l9,-7.67a10,10 0,0 1,6.48 -2.39H53.46a10,10 0,0 1,6.48 2.39l9,7.67a10,10 0,0 1,3.48 7.58v3.48a10,10 0,0 1,-3.2 7.32L59.7,75.32A9.91,9.91 0,0 1,52.94 78ZM42.54,40.12A8,8 0,0 0,37.36 42l-9,7.67a8,8 0,0 0,-2.78 6.06v3.48a8,8 0,0 0,2.56 5.85l9.48,8.77A8,8 0,0 0,43.06 76h9.88a8,8 0,0 0,5.41 -2.11l9.48,-8.77a8,8 0,0 0,2.56 -5.85V55.76a8,8 0,0 0,-2.78 -6.06l-9,-7.67a8,8 0,0 0,-5.18 -1.91Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M55.65,40.4a1.09,1.09 0,0 1,-0.39 -0.08A1,1 0,0 1,54.72 39l1.88,-4.48a1,1 0,0 1,1.85 0.77l-1.88,4.48A1,1 0,0 1,55.65 40.4Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M74.3,60.5a14.32,14.32 0,0 1,-3.14 -0.29,1 1,0 0,1 0.46,-1.94c0.43,0.09 10.49,2.26 20.65,-8.49a1,1 0,0 1,1.42 0,1 1,0 0,1 0,1.41C86.12,59.2 78.45,60.5 74.3,60.5Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M83.09,83.82a1,1 0,0 1,-1 -0.9C80.56,67.14 69.74,65.37 69.63,65.35a1,1 0,0 1,0.3 -2c0.12,0 12.47,2 14.16,19.35a1,1 0,0 1,-0.9 1.09Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M67.49,91.62a1,1 0,0 1,-0.53 -0.16,1 1,0 0,1 -0.31,-1.38c6.69,-10.55 -4,-17.75 -4.5,-18a1,1 0,0 1,-0.29 -1.38,1 1,0 0,1 1.39,-0.29c0.13,0.08 12.84,8.57 5.09,20.79A1,1 0,0 1,67.49 91.62Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M70.21,52.33a1,1 0,0 1,-0.16 -2c0.5,-0.09 12.3,-2.26 13.67,-16.21a1,1 0,0 1,1.09 -0.9,1 1,0 0,1 0.9,1.09c-1.52,15.51 -15.19,18 -15.33,18Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M83.34,35.22c-5.64,0 -10.14,-1.68 -13.4,-5 -6.27,-6.44 -5.63,-16.59 -5.6,-17a1,1 0,0 1,0.54 -0.82,1 1,0 0,1 1,0l11.39,7L75.49,5.51a1,1 0,0 1,0.4 -0.93,1 1,0 0,1 1,-0.11c7,3.2 11.22,7.57 12.61,13 2.24,8.76 -3.78,17 -4,17.31a1,1 0,0 1,-0.75 0.4ZM84.67,34.22h0ZM66.33,15c0.1,3 0.85,9.47 5,13.77 3,3.08 7.32,4.56 12.75,4.4 1.11,-1.65 5.19,-8.41 3.43,-15.25 -1.12,-4.39 -4.43,-8 -9.86,-10.86l1.8,14.15a1,1 0,0 1,-0.45 1,1 1,0 0,1 -1.06,0Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M58.37,36.07a3.28,3.28 0,1 1,3.28 -3.28A3.29,3.29 0,0 1,58.37 36.07ZM58.37,31.51a1.28,1.28 0,1 0,1.28 1.28A1.28,1.28 0,0 0,58.37 31.51Z"/>
+  </group>
 </vector>
